# ZelosKSROV1710

./: CMakeLists.txt  LICENSE.HEADER  README  ZelosOnline.pro
agentd/: CMakeLists.txt  agentd.pro  area.h  client.h  main.cpp  serv.conf  service.cpp  service.h  ticket.h
agentd/characterd/: state_handshake.cpp  state_handshake.h  state_player.cpp  state_player.h  states.h
agentd/gamed/: connection.cpp  connection.h  packet.cpp  packet.h  state_game.cpp  state_game.h  state_handshake.cpp  state_handshake.h  states.h
agentd/named/: state_handshake.cpp  state_handshake.h  state_name.h  states.h
agentd/server/: connection.cpp  connection.h  packet_login.cpp  packet_login.h  server.cpp  server.h  state_handshake.cpp  state_handshake.h  state_lobby.cpp  state_lobby.h  state_login.cpp  state_login.h  state_world.cpp  state_world.h  states.h
agentd/shardd/: packet_shard.cpp  packet_shard.h  state_handshake.cpp  state_handshake.h  state_shard.cpp  state_shard.h  states.h
certd/: CMakeLists.txt  certd.pro  main.cpp  packet_certify.cpp  packet_certify.h  serv.conf  server.cpp  server.h  server_states.h  service.cpp  service.h  state_certify.cpp  state_certify.h  state_handshake.cpp  state_handshake.h
gamed/: CMakeLists.txt  area.h  client.h  gamed.pro  main.cpp  manager_map.cpp  peer.h  player.h  serv.conf  service.cpp  service.h
gamed/characterd/: packet.cpp  packet.h  state_chard.cpp  state_chard.h  state_handshake.cpp  state_handshake.h  states.h
gamed/named/: state_handshake.h  state_name.cpp  state_name.h  states.h
gamed/server/: packet_game.cpp  packet_game.h  server.cpp  server.h  state_agent.cpp  state_agent.h  state_game.cpp  state_game.h  state_handshake.cpp  state_handshake.h  states.h
gamed/shardd/: packet_shard.cpp  packet_shard.h  state_handshake.cpp  state_handshake.h  state_shard.cpp  state_shard.h  states.h
gatewayd/: CMakeLists.txt  gatewayd.pro  main.cpp  opcodes_client.h  serv.conf  service.cpp  service.h  shard.h
gatewayd/globald/: packet.cpp  packet.h  state_global.cpp  state_global.h  state_handshake.cpp  state_handshake.h  states.h
gatewayd/server/: packet.cpp  packet.h  server.cpp  server.h  state_handshake.cpp  state_handshake.h  state_login.cpp  state_login.h  state_version.cpp  state_version.h  states.h
globald/: CMakeLists.txt  account_property.h  area.h  globald.pro  login_ticket.h  main.cpp  news.h  opcodes_client.h  serv.conf  service.cpp  service.h  shard.h  shard_config.h  strutil.h  ticket.h
globald/certd/: state_certify.cpp  state_certify.h  state_handshake.cpp  state_handshake.h  states.h
globald/certd/packet/: packet_certify.h
globald/packet/: packet_manager_shard.cpp  packet_manager_shard.h
globald/query/: query_account.cpp  query_account.h  query_manager.cpp  query_manager.h  query_news.cpp  query_news.h  query_shard.cpp  query_shard.h
globald/server/: packet_gateway.cpp  packet_gateway.h  server.cpp  server.h  state_gateway.cpp  state_gateway.h  state_handshake.cpp  state_handshake.h  state_name.cpp  state_name.h  state_shard.cpp  state_shard.h  states.h
libauth/: CMakeLists.txt  libauth.pro
libauth/include/auth/: authentication.h  authentication_sro.h  data.h  opcodes.h  packet_clt_authentication.h  packet_srv_authentication.h  packet_whois.h  security.h  security_modes.h
libauth/src/: authentication_sro.cpp  packet_clt_authentication.cpp  packet_srv_authentication.cpp  packet_whois.cpp  security.cpp
libkhamaileon/: CMakeLists.txt  libkhamaileon.pro
libkhamaileon/include/khamaileon/: parser_manager.h  strutil.h
libkhamaileon/src/: parser_manager.cpp  strutil.cpp
libkhamaileon/src/parser/: characterdata.cpp  itemdata.cpp  leveldata.cpp  levelgold.cpp  npcpos.cpp  refcharacter_drop.cpp  refcharacter_drop_quality.cpp  refcharacter_facing.cpp  refcharacter_quality.cpp  refcharacter_task.cpp  refmappingshopgroup.cpp  refmappingshopwithtab.cpp  refpackageitem.cpp  refshopgoods.cpp  (+10 more)
libnet/: CMakeLists.txt  libnet.pro
libnet/src/: cmake_install.cmake  connection.cpp  server.cpp  service.cpp  service_client.cpp  utility.cpp
libphysic/: CMakeLists.txt  libphysic.pro
libphysic/src/: coordinates.cpp  line.cpp  model.cpp  model_manager.cpp  model_mesh.cpp  model_mesh_collision.cpp  navigation_cell.cpp  navigation_entity.cpp  navigation_mesh.cpp  rectangle.cpp  rtree.cpp
libsso/: CMakeLists.txt  libsso.pro
libsso/src/: exchange.cpp  mastery.cpp  npc_util.cpp  stall.cpp  storage.cpp
named/: CMakeLists.txt  main.cpp  name_service.h  named.pro  serv.conf  service.cpp  service.h
named/certd/: state_certify.cpp  state_certify.h  state_handshake.cpp  state_handshake.h  states.h
named/globald/: state_global.cpp  state_global.h  state_handshake.cpp  state_handshake.h  states.h
named/server/: packet.cpp  packet.h  server.cpp  server.h  state_handshake.cpp  state_handshake.h  state_register.cpp  state_register.h  states.h
services/characterd/: CMakeLists.txt  characterd.pro  main.cpp  manager.cpp  manager.h  query_block.cpp  query_block.h  query_buff.cpp  query_buff.h  query_cos.cpp  query_cos.h  query_hotkey.cpp  query_hotkey.h  query_item.cpp  query_item.h  query_item_basic.cpp  query_item_basic.h  query_job.cpp  query_job.h  query_mastery.cpp  query_mastery.h  query_player.cpp  query_player.h  query_skill.cpp  query_skill.h  query_storage.cpp  query_storage.h  serv.conf  service.cpp  service.h
services/template/: CMakeLists.txt  main.cpp  serv.conf  service.cpp  service.h
shardd/: CMakeLists.txt  agent.h  area.h  gshard.h  main.cpp  serv.conf  service.cpp  service.h  shardd.pro  ticket.h
shardd/certd/: packet_certify.cpp  packet_certify.h  state_certify.cpp  state_certify.h  state_handshake.cpp  state_handshake.h  states.h
shardd/globald/: packet_global.cpp  packet_global.h  state_global.cpp  state_global.h  state_handshake.cpp  state_handshake.h  states.h
shardd/server/: packet_agent.cpp  packet_agent.h  packet_area.cpp  packet_game.cpp  packet_game.h  server.cpp  server.h  state_agent.cpp  state_agent.h  state_game.cpp  state_game.h  state_handshake.cpp  state_handshake.h  states.h
(+260 files in other folders)
